[gd_scene load_steps=7 format=3 uid="uid://wqjn5kfux0as"]

[ext_resource type="Script" path="res://scenes/possible_careers/possible_careers.gd" id="1_lt612"]
[ext_resource type="Texture2D" uid="uid://cuf41mjhd26o1" path="res://assets/images/gradient2.png" id="2_2gxmn"]
[ext_resource type="Theme" uid="uid://70hskfqdsfpy" path="res://assets/fonts/Roboto/RobotoTheme.tres" id="2_xv8d1"]
[ext_resource type="PackedScene" uid="uid://whc30x5guvjx" path="res://scenes/id_button/id_button.tscn" id="3_csxvj"]
[ext_resource type="PackedScene" uid="uid://c2my5t75ju8rv" path="res://scenes/Particles/confetti.tscn" id="5_wr7k8"]
[ext_resource type="AudioStream" uid="uid://c2jqvy0umg0dh" path="res://assets/audio/sfx/clapping_applause.mp3" id="6_b0fkm"]

[node name="PossibleCareers" type="Node2D"]
script = ExtResource("1_lt612")

[node name="ColorRectBackGround" type="ColorRect" parent="."]
offset_left = -4.0
offset_top = -4.0
offset_right = 607.0
offset_bottom = 667.0
color = Color(0, 0, 0, 0.572549)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 602.0
offset_bottom = 663.0
texture = ExtResource("2_2gxmn")
expand_mode = 1

[node name="MajorsLabel" type="Label" parent="."]
offset_left = 98.0
offset_top = 10.0
offset_right = 190.0
offset_bottom = 46.0
theme = ExtResource("2_xv8d1")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Majors"

[node name="JobsLabel" type="Label" parent="."]
offset_left = 399.0
offset_top = 10.0
offset_right = 465.0
offset_bottom = 46.0
theme = ExtResource("2_xv8d1")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Jobs"

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 18.0
offset_top = 49.0
offset_right = 583.0
offset_bottom = 62.0
color = Color(0, 0, 0, 0.419608)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 293.0
offset_top = 14.0
offset_right = 308.0
offset_bottom = 643.0
color = Color(0, 0, 0, 0.419608)

[node name="IdButton1" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(32, 134)
id = 1

[node name="IdButton2" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(32, 302)
id = 2

[node name="IdButton3" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(32, 470)
id = 3

[node name="IdButton4" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(325, 79)
id = 4

[node name="IdButton5" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(325, 191)
id = 5

[node name="IdButton6" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(325, 302)
id = 6

[node name="IdButton7" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(325, 417)
id = 7

[node name="IdButton8" parent="." instance=ExtResource("3_csxvj")]
position = Vector2(325, 524)
id = 8

[node name="Confetti" parent="." instance=ExtResource("5_wr7k8")]
rotation = -0.174533
scale = Vector2(10, 10)

[node name="Confetti2" parent="." instance=ExtResource("5_wr7k8")]
position = Vector2(607, -4)
rotation = 0.174533
scale = Vector2(10, 10)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_b0fkm")

[connection signal="clicked" from="IdButton1" to="." method="on_id_button_clicked"]
[connection signal="clicked" from="IdButton2" to="." method="on_id_button_clicked"]
[connection signal="clicked" from="IdButton3" to="." method="on_id_button_clicked"]
[connection signal="clicked" from="IdButton4" to="." method="on_id_button_clicked"]
[connection signal="clicked" from="IdButton5" to="." method="on_id_button_clicked"]
[connection signal="clicked" from="IdButton6" to="." method="on_id_button_clicked"]
[connection signal="clicked" from="IdButton7" to="." method="on_id_button_clicked"]
[connection signal="clicked" from="IdButton8" to="." method="on_id_button_clicked"]
